--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-ga": "^2.5.3",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "webpack-dev-server": "^3.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
