--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Karly Hoffman",
-  "name": "Karly Hoffman Front End Developer",
+  "name": "Karly Hoffman Frontend Developer",
   "icons": [
     {
       "src": "favicon.ico",
