--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "homepage": "https://karlyhoffman.com",
   "dependencies": {
-    "gsap": "^2.0.2",
-    "node-sass": "^4.9.3",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-ga": "^2.5.3",
-    "react-scripts": "2.0.4"
+    "gsap": "^3.0.1",
+    "node-sass": "^4.13.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-ga": "^2.7.0",
+    "react-scripts": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
