--- a/2021-refactor/package.json
+++ b/2021-refactor/package.json
@@ -22,6 +22,10 @@
   "dependencies": {
     "next": "^10.0.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sass": "^1.32.0"
+  },
+  "devDependencies": {
+    "sass-resources-loader": "^2.1.1"
   }
 }
